RESOLVED FIXED114743
BasicShapeFunctions should use RenderStyle instead of StyleResolver
https://bugs.webkit.org/show_bug.cgi?id=114743
Summary BasicShapeFunctions should use RenderStyle instead of StyleResolver
Dirk Schulze
Reported 2013-04-17 07:50:38 PDT
BasicShapeFunctions should use RenderStyle instead of StyleResolver
Attachments
Patch (8.71 KB, patch)
2013-04-17 07:57 PDT, Dirk Schulze
koivisto: review+
Patch fo landing (8.62 KB, patch)
2013-04-17 15:07 PDT, Dirk Schulze
no flags
Dirk Schulze
Comment 1 2013-04-17 07:57:43 PDT
WebKit Commit Bot
Comment 2 2013-04-17 07:58:47 PDT
Attachment 198510 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/css/BasicShapeFunctions.cpp', u'Source/WebCore/css/BasicShapeFunctions.h', u'Source/WebCore/css/DeprecatedStyleBuilder.cpp']" exit_code: 1 Source/WebCore/css/BasicShapeFunctions.h:43: The parameter name "style" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2013-04-17 08:15:20 PDT
Comment on attachment 198510 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=198510&action=review >> Source/WebCore/css/BasicShapeFunctions.h:43 >> +PassRefPtr<BasicShape> basicShapeForValue(RenderStyle* style, RenderStyle* rootElementStyle, const CSSBasicShape*); > > The parameter name "style" adds no information, so it should be removed. [readability/parameter_name] [5] These should be const. I would put the main input (the shape) first.
Dirk Schulze
Comment 4 2013-04-17 15:07:48 PDT
Created attachment 198616 [details] Patch fo landing
WebKit Commit Bot
Comment 5 2013-04-17 15:36:29 PDT
Comment on attachment 198616 [details] Patch fo landing Rejecting attachment 198616 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 198616, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: differ, using rebase: :040000 040000 acb0cf64aa1f0ec42b9dcae7d83d4f7e7d338ed1 21f93620f0f7e280e26e43b9489291f5ec959909 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-queues.appspot.com/results/61388
WebKit Commit Bot
Comment 6 2013-04-17 16:27:44 PDT
Comment on attachment 198616 [details] Patch fo landing Clearing flags on attachment: 198616 Committed r148645: <http://trac.webkit.org/changeset/148645>
WebKit Commit Bot
Comment 7 2013-04-17 16:27:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.