BasicShapeFunctions should use RenderStyle instead of StyleResolver https://bugs.webkit.org/show_bug.cgi?id=114743

Reviewed by Antti Koivisto.

BasicShapeFunctions does include RenderStyle instead of StyleResolver now.
This is a simple refactoring patch, no new tests.

* css/BasicShapeFunctions.cpp:
(WebCore::convertToLength): Use style and rootElementStyle directly.
(WebCore::basicShapeForValue): Ditto.
* css/BasicShapeFunctions.h:
(WebCore):
* css/DeprecatedStyleBuilder.cpp:
(WebCore::ApplyPropertyClipPath::applyValue):
(WebCore::ApplyPropertyExclusionShape::applyValue):


Canonical link: https://commits.webkit.org/133169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148645 268f45cc-cd09-0410-ab3c-d52691b4dbfc